[gd_scene load_steps=5 format=3 uid="uid://cp2yabkxip7n6"]

[ext_resource type="Script" uid="uid://txy2p16prtwd" path="res://Scenes/Game/Game.gd" id="1_ln2h6"]
[ext_resource type="Texture2D" uid="uid://cq31b4my6uo3s" path="res://Assets/background/rocks_2.png" id="1_rdw05"]
[ext_resource type="PackedScene" uid="uid://d6w2lskq80qv" path="res://Scenes/Tappy/Tappy.tscn" id="2_gwu2e"]
[ext_resource type="PackedScene" uid="uid://depnyog2451fn" path="res://Scenes/Barrier/Barrier.tscn" id="3_xbxml"]

[node name="Game" type="Node"]
script = ExtResource("1_ln2h6")

[node name="Rocks2" type="Sprite2D" parent="."]
position = Vector2(486, 390)
texture = ExtResource("1_rdw05")

[node name="Tappy" parent="." instance=ExtResource("2_gwu2e")]
position = Vector2(64, 361)

[node name="Barrier" parent="." instance=ExtResource("3_xbxml")]

[node name="PipesHolder" type="Node" parent="."]

[node name="UpperSpawn" type="Marker2D" parent="."]
position = Vector2(530, 280)

[node name="LowerSpawn" type="Marker2D" parent="."]
position = Vector2(530, 550)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
